# tls-certificate-builder

./: .gitignore  README.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  test-forge-deeper.mjs  test-forge.js  test-forge.mjs  vite.config.js
.github/workflows/: test.yml
cert-parser-wasm/: Cargo.toml
cert-parser-wasm/src/: lib.rs
cert-wasm/: Cargo.toml
cert-wasm/src/: lib.rs
src/: App.css  App.jsx  index.css
src/components/: CertificateFlow.css  CertificateFlow.jsx  CertificateNode.css  CertificateNode.jsx  FileDropZone.css  FileDropZone.jsx  PasswordModal.css  PasswordModal.jsx  PrivateKeyNode.css  PrivateKeyNode.jsx
src/utils/: certificateParser.js  certificateParserWasm.js  dataJoin.js  wasmWrapper.js
tests/: certificateParser.test.js  dataJoin.test.js  test-certificates.js
