[package]
name = "cert-parser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
x509-parser = "0.16"
pem = "3.0"
pkcs8 = { version = "0.10", features = ["pem", "pkcs5"] }
der = "0.7"
base64 = "0.22"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
